# openring_embedded_project_submission

./: CMakeLists.txt  Readme.md
docs/: Architecture.md  Debugging.md
src/: SensorManager.cpp  SensorManager.hpp
tests/: test_sensor_manager.cpp
